--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
-h1 {
-    color: rebeccapurple;
+iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
 }
